@@ -30,6 +30,12 @@
       file</td>
   </tr>
   <tr>
+    <td valign="top">destfile</td> 
+    <td valign="top">the file to send the output to instead of
+      patching the file(s) in place.  <em>since Ant 1.6</em></td>
+    <td align="center" valign="top">No.</td>
+  </tr>
+  <tr>
     <td valign="top">backups</td> 
     <td valign="top">Keep backups of the unpatched files</td>
     <td align="center" valign="top">No</td>
@@ -75,7 +81,7 @@ the diff output looked like</p>
 </pre> 
 the leading <i>a/</i> will be stripped.
 <hr>
-<p align="center">Copyright &copy; 2000-2002 Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2003 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
